--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-REACT_APP_API_KEY = f557c305f3104f95bc15a9501b81cffc 
-FORTUNE_REACT_APP_API_KEY = e25c8a47635e42d18ba511dbb05812f6 
+REACT_APP_API_KEY = e25c8a47635e42d18ba511dbb05812f6 
+
+# chaged it ooo 
+FORTUNE_REACT_APP_API_KEY_e2 = f557c305f3104f95bc15a9501b81cffc 
+
+
+OTHER
